clean up: adjust header link spacing; fix narow view in root; convert anchor to Link for perfomance; decrease padding on narrow;

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,21 @@
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
+    flex-grow: 1;
+    max-width: 1000px;
     padding: 2rem;
-    text-align: center;
+    box-sizing: border-box;
+  
+    --tagline-font-size: 3rem;
+    --section-title-font-size: 2rem;
+}
+  
+@media (max-width: 750px) {
+    .section-title {
+      text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+    #root {
+      padding: 1.5rem 1rem;
+    }
 }
