--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -19,11 +19,13 @@
 .header .nav ul {
     margin: 0;
     display: flex;
+    justify-content: space-between;
+    gap: 24px;
 }
 
 .header .nav li {
     list-style: none;
-    padding: 0 18px;
+    /* padding: 0 18px; */
 }
 
 .header a {
