--- a/src/components/ProjectShowcase.module.css
+++ b/src/components/ProjectShowcase.module.css
@@ -1,15 +1,20 @@
+.section-container {
+    display: flex;
+    flex-direction: column;
+}
+
 .section-container h2 {
     font-size: var(--section-title-font-size);
     margin-bottom: 3rem;
 }
 
 .projects-container {
+    align-self: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 100px;
     width: 95%;
-    margin: 0 auto;
 }
 
 .project:nth-child(odd) .project-content-container {
